# centrifuge

./: LICENSE  README.md  centrifuge.cabal  example.md  graph-cruncher.cabal  stack.yaml
examples/: Main.hs  script.md
examples/graphs/: fdl_17.graphml
src/: Main.hs
src/Centrifuge/: DSL.hs
src/Centrifuge/DSL/: Generic.hs  Protein.hs
src/Centrifuge/GraphML/: Parser.hs
src/Centrifuge/REPL/: Main.hs
src/Centrifuge/VHDL/: PrettyPrinter.hs
src/Cruncher/: Cruncher.hs  DSL.hs  Protein.hs  Types.hs
src/Cruncher/GraphML/: Parser.hs
src/Cruncher/VHDL/: PrettyPrinter.hs
