name:                centrifuge
version:             0.0.1
description:         Please see README.md
homepage:            https://github.com/tuura/centrifuge#readme
license:             MIT
license-file:        LICENSE
author:              Georgy Lukyanov <georgiylukjanov@gmail.com>, github: @geo2a
maintainer:          Georgy Lukyanov <georgiylukjanov@gmail.com>, github: @geo2a
copyright:           2017 Georgy Lukyanov
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC==8.0.2
stability:           experimental

description:

  An experimental graph parsing, manipulation and transformation library based on
  <http://hackage.haskell.org/package/algebraic-graphs/docs/Algebra-Graph.html Algebraic graphs>
  .
  This code is meant to be an accompanying material for 'Embedding Graphs in Silicon' FDL'17 paper.
  .
  VHDL code generation is a port of a corresponding <https://github.com/tuura/pangraph/tree/master/src/Pangraph/VHDL pangraph> module.
  .
  The <Centrifuge.DSL> module provides a DSL for protein network import, transformation and FPGA embedding.
  .
  The <Centrifuge.GraphML.Parse> lets to parse GraphML files into polymorphic algebraic graph expressions.
  .
  The <Centrifuge.VHDL.PrettyPrinter> provide a VHDL code generator for algebraic graph expressions.

library
  hs-source-dirs:      src
  exposed-modules:     Centrifuge.DSL.Generic,
                       Centrifuge.DSL.Protein, 
                       Centrifuge.GraphML.Parser,
                       Centrifuge.VHDL.PrettyPrinter
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hexml
                     , algebraic-graphs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tuura/centrifuge
