name:                graph-cruncher
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/tuura/graph-cruncher#readme
license:             BSD3
license-file:        LICENSE
author:              Georgy Lukyanov
maintainer:          georgiylukjanov@gmail.com
copyright:           2017 Georgy Lukyanov
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cruncher.Types,
                       Cruncher.GraphML.Parser,
                       Cruncher.VHDL.PrettyPrinter
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hexml
                     , algebraic-graphs
  default-language:    Haskell2010

executable graph-cruncher-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , graph-cruncher
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/graph-cruncher
